<resources>
    <string name="app_name">MobileGlobal</string>
    <string name="text_eletropontos">Eletropontos</string>
    <string name="text_meu_perfil">Meu perfil</string>
    <string name="text_meu_veiculo">Meu veículo</string>
    <string name="text_minhas_reservas">Minhas reservas</string>
    <string name="voltar">voltar</string>
    <string name="favorito">favorito</string>
    <string name="logo">logo</string>
    <string name="nome_template">Nome: %1$s</string>
    <string name="email_template">Email: %1$s</string>
    <string name="modelo_template">Modelo: %1$s</string>
    <string name="modelo_nao_informado">Modelo não informado</string>
    <string name="marca_template">Marca: %1$s</string>
    <string name="marca_nao_informada">Marca não informada</string>
    <string name="plug_template">Plug: %1$s</string>
    <string name="plug_nao_informado">Plug não informado</string>
    <string name="placa_template">Placa: %1$s</string>
    <string name="placa_nao_informada">Placa não informada</string>
    <string name="nome_vazio">O nome não pode estar vazio!</string>
    <string name="nome_atualizado">Nome de usuário atualizado com sucesso!</string>
    <string name="saudacao_usuario">Olá, %1$s</string>
    <string name="modelo_texto">Modelo: %1$s</string>
    <string name="marca_texto">Marca: %1$s</string>
    <string name="plug_texto">Plug: %1$s</string>
    <string name="placa_texto">Placa: %1$s</string>
    <string name="nome_usuario">Nome: %1$s</string>
    <string name="modelo_veiculo">Modelo: %1$s</string>
    <string name="marca_veiculo">Marca: %1$s</string>
    <string name="plug_veiculo">Plug: %1$s</string>
    <string name="placa_veiculo">Placa: %1$s</string>
    <string name="hora_selecionada">Hora Selecionada: %1$s</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome_completo">Nome completo</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="pr_ximo">Próximo</string>
    <string name="cancelar">Cancelar</string>
    <string name="digite_a_placa_do_ve_culo">Digite a placa do veículo</string>
    <string name="n_mero_da_placa">Número da placa</string>
    <string name="modelo_do_ve_culo">Modelo do veículo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="marca_do_ve_culo">Marca do veículo</string>
    <string name="plugs_ou_adaptadores">Plugs ou adaptadores</string>
    <string name="meu_ve_culo">Meu veículo</string>
    <string name="bot_o_de_voltar">Botão de voltar</string>
    <string name="buscar_endere_o">Buscar endereço</string>
    <string name="ol">Olá,</string>
    <string name="usu_rio">Usuário</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="ou">OU</string>
    <string name="primeiro_acesso">PRIMEIRO ACESSO</string>
    <string name="acessar">ACESSAR</string>

</resources>