<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/nome_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Olá,"
        android:textColor="@color/cinza_texto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/View"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ImageView
        android:id="@+id/imagem_provisoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sem_imagem"
        app:layout_constraintBottom_toBottomOf="@+id/View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:background="@drawable/shape_container_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Card 1 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_eletroponto"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="20dp"
                    android:elevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/menu_eletroponto"
                        android:alpha="0.5"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_eletropontos"
                        android:textColor="@color/cinza_texto"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <!-- Card 2 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_minhas_reservas"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="20dp"
                    android:elevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/menu_reserva"
                        android:alpha="0.5"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_minhas_reservas"
                        android:textColor="@color/cinza_texto"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <!-- Card 3 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_meu_veiculo"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="20dp"
                    android:elevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/menu_meu_veiculo"
                        android:alpha="0.5"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_meu_veiculo"
                        android:textColor="@color/cinza_texto"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <!-- Card 4 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_meu_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="20dp"
                    android:elevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/menu_perfil"
                        android:alpha="0.5"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_meu_perfil"
                        android:textColor="@color/cinza_texto"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
